--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,16 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
+    id 'signing'
     id 'java-library-distribution'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
     withSourcesJar()
+    withJavadocJar()
 }
 
 tasks.withType(JavaCompile) {
@@ -15,7 +18,7 @@ tasks.withType(JavaCompile) {
 }
 
 group = "dev.atchison"
-version = '1.0.4.1'
+version = '1.0.4.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -52,7 +55,52 @@ def integrationTest = tasks.register("integrationTest", Test) {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            from components.java
+            from(components.java)
+
+            pom {
+                name.set("mariadb-cdc")
+                description.set("java library for using the MariaDB binary log")
+                url.set("https://github.com/TheKnowles/mariadb-cdc")
+                licenses {
+                    license {
+                        name.set("MIT License")
+                        url.set("https://opensource.org/license/mit/")
+                    }
+                }
+                developers {
+                    developer {
+                        id.set("TheKnowles")
+                        name.set("Knowles Atchison, Jr")
+                        email.set("katchisonjr@gmail.com")
+                    }
+                }
+                scm {
+                    connection.set("scm:git:https://github.com/TheKnowles/mariadb-cdc.git")
+                    developerConnection.set("scm:git:https://github.com/TheKnowles/mariadb-cdc.git")
+                    url.set("https://github.com/TheKnowles/mariadb-cdc")
+                }
+            }
         }
     }
 }
+
+// These must be set in gradle.properties:
+// sonatypeUsername=
+// sonatypePassword=
+nexusPublishing {
+    repositories {
+        sonatype {  //only for users registered in Sonatype after 24 Feb 2021
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+        }
+    }
+}
+
+// These must be set in gradle.properties:
+// signing.keyId=
+// signing.password=
+// signing.secretKeyRingFile=
+signing {
+    sign publishing.publications.mavenJava
+}
+
